in the document. As it corresponds to the most usual situation (e.g., 
preserving spaces in Excel tags), the option is on by default.

  - New version of the JNA library (used to launch Hunspell), compatible 
with Windows 64-bit

  - New Iceni Infix file filter

  - Partial support for StarDict dictionaries with sametypesequence=h

  Bug fixes:

  - PO filter mangles \\r strings
  http://sourceforge.net/support/tracker.php?aid=3292553

  - Wrong TransTip when target term contains comma
  http://sourceforge.net/support/tracker.php?aid=2970681

  - LaTeX filter: comments are removed from target documents
  http://sourceforge.net/support/tracker.php?aid=3297471

  Localisation updates:

  - Brazilian Portuguese localisation updated to 2.2.3 update 2 (UI, documentation)
  - Dutch localisation updated to 2.2.4 (UI)

----------------------------------------------------------------------
 OmegaT 2.2.3 update 4
----------------------------------------------------------------------
   0 Enhancement
   2 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
2.2.3 update 4 vs. 2.2.3 update 3

  Bug fixes:

  - HTML filter: PHP tags are transformed into HTML entities
  http://sourceforge.net/support/tracker.php?aid=3175744

  - For three languages, the internal locale was corresponding to an 
obsolete locale, which meant the spell checker wasn't finding the correct
dictionary. The affected locales were "id", which was changed to "in", 
"he", changed to "iw" and "yi" changed to "ji".

----------------------------------------------------------------------
 OmegaT 2.2.3 update 3
----------------------------------------------------------------------
   0 Enhancement
   4 Bug fixes
   3 Localisation updates
----------------------------------------------------------------------
2.2.3 update 3 vs. 2.2.3 update 2

  Bug fixes:

  - Android filter: the apostrophe (') character was not escaped properly
with a preceding \
